fixed card grid spacing to be more centered on mobile #4

--- a/styles.css
+++ b/styles.css
@@ -666,15 +666,17 @@ footer {
     .card-section__title {
         font-size: 1.4em;
         text-align: left;
-        margin: 0 auto;
-        padding: 0 20px;
+        padding: 0 15px;
         max-width: 100%;
-        margin-top: 5%;
+        margin-top: 1em;
+        margin-bottom: 0.5em;
     }
 
     .card-section__grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        gap: 5px;
+        padding: 0 10px;
     }
 
     .card {
